force-app/main/default/objects/Job__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <description>The Account record representing the company/entity with the job opening.</description>
    <inlineHelpText>Account record that is the Employer for this job.</inlineHelpText>
    <label>Employer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Employer</value>
        </filterItems>
        <infoMessage>Available options are Accounts of Employer RecordType.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>