force-app/main/default/objects/Job__c/fields/Imported_from_Jooble__c.field-meta.xml
<CustomField>
    <fullName>Imported_from_Jooble__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Imported from Jooble</label>
    <type>Checkbox</type>
</CustomField>