force-app/main/default/objects/Job__c/fields/IsCreated__c.field-meta.xml
<CustomField>
    <fullName>IsCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to conditionally hide/show form and layout fields.</description>
    <label>IsCreated</label>
    <type>Checkbox</type>
</CustomField>