force-app/main/default/objects/Job__c/fields/Jooble_Location__c.field-meta.xml
<CustomField>
    <fullName>Jooble_Location__c</fullName>
    <label>Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>