force-app/main/default/objects/Job__c/fields/Jooble_Salary__c.field-meta.xml
<CustomField>
    <fullName>Jooble_Salary__c</fullName>
    <label>Jooble Salary</label>
    <length>100</length>
    <type>Text</type>
</CustomField>