force-app/main/default/objects/Job__c/fields/Jooble_Source__c.field-meta.xml
<CustomField>
    <fullName>Jooble_Source__c</fullName>
    <label>Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>