force-app/main/default/objects/Job__c/fields/Jooble_Type__c.field-meta.xml
<CustomField>
    <fullName>Jooble_Type__c</fullName>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>