force-app/main/default/objects/Job__c/fields/JoobleId__c.field-meta.xml
<CustomField>
    <fullName>JoobleId__c</fullName>
    <externalId>true</externalId>
    <label>JoobleId</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>