force-app/main/default/objects/Job__c/fields/Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Long_Name__c</fullName>
    <description>Used to hold the concatenated Position (Name) and Employer Name values.</description>
    <inlineHelpText>A concatenation of the Job Name (Position) and Employer fields.</inlineHelpText>
    <label>Position (Long)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>