force-app/main/default/objects/Job__c/fields/Market_Analysis_Date__c.field-meta.xml
<CustomField>
    <fullName>Market_Analysis_Date__c</fullName>
    <label>Market Analysis Date</label>
    <type>Date</type>
</CustomField>