force-app/main/default/objects/Job__c/fields/Market_Salary_Max__c.field-meta.xml
<CustomField>
    <fullName>Market_Salary_Max__c</fullName>
    <label>Market Salary Max</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>