force-app/main/default/objects/Job__c/fields/Medicare_Tax__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Tax__c</fullName>
    <label>Medicare Tax</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>