force-app/main/default/objects/Job__c/fields/Open_Age__c.field-meta.xml
<CustomField>
    <fullName>Open_Age__c</fullName>
    <formula>IF(ISNULL(Close_Date__c), Today() - Open_Date__c, Close_Date__c - Open_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>