force-app/main/default/objects/Job__c/fields/Salary_Competitiveness__c.field-meta.xml
<CustomField>
    <fullName>Salary_Competitiveness__c</fullName>
    <label>Salary Competitiveness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>