force-app/main/default/objects/Job__c/fields/Take_Home_Pay_6_Month__c.field-meta.xml
<CustomField>
    <fullName>Take_Home_Pay_6_Month__c</fullName>
    <label>Take Home Pay 6 Month</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>