force-app/main/default/objects/Job__c/fields/Take_Home_Pay_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Take_Home_Pay_Monthly__c</fullName>
    <label>Take Home Pay Monthly</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>