force-app/main/default/objects/Job__c/listViews/All_Jobs_New.listView-meta.xml
<ListView>
    <fullName>All_Jobs_New</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Employer__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Imported_from_Jooble__c</columns>
    <columns>Jooble_Salary__c</columns>
    <columns>JoobleId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Jobs</label>
</ListView>