force-app/main/default/objects/Job__c/listViews/My_Jobs.listView-meta.xml
<ListView>
    <fullName>My_Jobs</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Employer__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Imported_from_Jooble__c</columns>
    <columns>Jooble_Salary__c</columns>
    <columns>JoobleId__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Jobs</label>
</ListView>